<resources>
    <string name="app_name">My Application</string>
    <string name="previous">PREV</string>
    <string name="next">NEXT</string>
    <string name="schedulemetting">SCHEDULE COMPANY MEETING</string>
    <string name="meeting_date">Meeting date</string>
    <string name="description">Description</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="submit">Submit</string>
    <string name="back">BACK</string>
    <string name="scheduleameeting">Schedule a meeting</string>
</resources>