<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:id="@+id/toolbar_meet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:drawablePadding="5dp"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/selcted_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawablePadding="5dp"
        android:textAllCaps="true"
        android:text="@string/scheduleameeting"
        android:textColor="@android:color/white"
        android:textStyle="bold"></TextView>



</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar_meet"
    android:background="#F7F7F7"
   >

    <TextView
        android:id="@+id/meet_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/meeting_date"
        android:background="#EEEEEE"
        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
        android:padding="20dp" />

    <TextView
        android:id="@+id/meet_st_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/start_time"
        android:layout_below="@+id/meet_date"
        android:background="#EEEEEE"
        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
        android:padding="20dp" />

    <TextView
        android:id="@+id/meet_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/end_time"
        android:background="#EEEEEE"
        android:layout_below="@+id/meet_st_time"
        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
        android:padding="20dp" />

    <EditText
        android:id="@+id/meet_des_date"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        android:gravity="left"

        android:layout_below="@+id/meet_end_date"
        android:hint="@string/description"
        android:background="@android:color/white"
        android:padding="20dp" />

    <Button
        android:id="@+id/submit_meet_des_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_below="@+id/meet_des_date"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"></Button>

</RelativeLayout>
</RelativeLayout>