<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/toolbar_meet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <TextView
            android:id="@+id/prev_meet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            android:drawablePadding="5dp"
            android:text="@string/previous"
            android:textColor="@android:color/white"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/selcted_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawablePadding="5dp"
            android:text="dd-mm-yyyy"
            android:textColor="@android:color/white"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/next_meet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
            android:drawablePadding="5dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold"></TextView>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meetinglist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_meet"></androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sch_meet_main"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/schedulemetting"
        android:textColor="@android:color/white"
        android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>